--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Mona+Sans:ital,wght@0,200..900;1,200..900&display=swap");
 
 @import "tailwindcss";
+
 @font-face {
     font-family: "Modern Negra";
-    src: url("/public/fonts/Modern Negra Demo.ttf") format("truetype");
+    src: url("/fonts/Modern Negra Demo.ttf") format("truetype");
 }
 
 @theme {
@@ -50,7 +51,7 @@ body {
 }
 
 @utility masked-img {
-    mask-image: url("/public/images/mask-img.png");
+    mask-image: url("/images/mask-img.png");
     mask-repeat: no-repeat;
     mask-position: center;
     mask-size: 50%;
@@ -82,7 +83,7 @@ body {
     }
 
     .noisy {
-        @apply absolute inset-0 size-full bg-[url("/public/images/noise.png")];
+        @apply absolute inset-0 size-full bg-[url("/images/noise.png")];
     }
 
     #hero {
